Fix a CSS/display bug dealing with the default screen on mobile screens

--- a/src/components/MiddlePanels.css
+++ b/src/components/MiddlePanels.css
@@ -61,6 +61,10 @@
   #middle #default-bg {
     left: -450px;
   }
+
+  #middle #item-display.default {
+    display: none;
+  }
 }
 
 #middle .tea-shelf {
